--- a/notebooks/View_predictions-Copy1.ipynb
+++ b/notebooks/View_predictions-Copy1.ipynb
@@ -706,7 +706,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -720,7 +720,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
