--- a/notebooks/UploadPredictionsOnWandB.ipynb
+++ b/notebooks/UploadPredictionsOnWandB.ipynb
@@ -38,12 +38,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# run_dir = Path(\"/globalscratch/users/n/s/nsayez/outputs/2022-06-05/14-29-30\")\n",
-    "run_dir = Path(\"/globalscratch/users/n/s/nsayez/outputs/2022-06-05/18-24-05\")\n"
+    "# run_dir = Path(\"/globalscratch/users/n/s/nsayez/outputs/2022-06-05/18-24-05\")\n",
+    "#T400-T350\n",
+    "# run_dir = Path(\"/globalscratch/users/n/s/nsayez/outputs/2022-06-21/14-18-40\")\n",
+    "#T400-T350_alternating\n",
+    "run_dir = Path(\"/globalscratch/users/n/s/nsayez/outputs/2022-06-22/11-27-27\")\n"
    ]
   },
   {
@@ -55,11 +59,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {
     "scrolled": false
    },
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "bioblue.loss.CombineLosses\n",
+      "['sunspot']\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[34m\u001b[1mwandb\u001b[0m: Currently logged in as: \u001b[33mnielssayez\u001b[0m. Use \u001b[1m`wandb login --relogin`\u001b[0m to force relogin\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "wandb version 0.12.18 is available!  To upgrade, please run:\n",
+       " $ pip install wandb --upgrade"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Tracking run with wandb version 0.12.17"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Run data is saved locally in <code>./wandb/run-20220622_134241-1iea2uih</code>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Syncing run <strong><a href=\"https://wandb.ai/nielssayez/Deepsun/runs/1iea2uih\" target=\"_blank\">Enhanced-T400-T350_alternating-StepLR</a></strong> to <a href=\"https://wandb.ai/nielssayez/Deepsun\" target=\"_blank\">Weights & Biases</a> (<a href=\"https://wandb.me/run\" target=\"_blank\">docs</a>)<br/>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -68,15 +136,36 @@
       "TPU available: False, using: 0 TPU cores\n",
       "IPU available: False, using: 0 IPUs\n",
       "HPU available: False, using: 0 HPUs\n",
-      "`Trainer(val_check_interval=1.0)` was configured so validation will run at the end of the training epoch..\n"
+      "`Trainer(val_check_interval=1.0)` was configured so validation will run at the end of the training epoch..\n",
+      "LOCAL_RANK: 0 - CUDA_VISIBLE_DEVICES: [0,1]\n"
      ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e68b424c12bf4007b317441de399f254",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Testing: 0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "bioblue.loss.CombineLosses\n",
-      "['sunspot']\n"
+      "────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────\n",
+      "       Test metric             DataLoader 0\n",
+      "────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────\n",
+      "       test_bgiou           0.9997609147645661\n",
+      "        test_loss          0.0005967207252979279\n",
+      "      test_meaniou          0.8740941842125038\n",
+      "     test_sunspotiou        0.7484274536604416\n",
+      "────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────\n"
      ]
     }
    ],
@@ -85,14 +174,91 @@
     "                                    run_path= run_dir,\n",
     "                                    load_trainer=True,\n",
     "                                    override = [\n",
-    "                                        '~callbacks.wandb',\n",
+    "#                                         '~callbacks.wandb',\n",
     "                                        f'callbacks.Save_prediction.output_dir={str(run_dir/\"predictions\")}'\n",
     "                                    ]\n",
     "                                )\n",
     "test_dataloader = dm.test_dataloader()\n",
     "\n",
-    "# results = trainer.test(model, datamodule=dm)\n",
+    "results = trainer.test(model, datamodule=dm)\n",
     "# # results = trainer.test(model, dataloaders=test_dataloader)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "Waiting for W&B process to finish... <strong style=\"color:green\">(success).</strong>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(Label(value='0.001 MB of 0.001 MB uploaded (0.000 MB deduped)\\r'), FloatProgress(value=1.0, max…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<style>\n",
+       "    table.wandb td:nth-child(1) { padding: 0 10px; text-align: left ; width: auto;} td:nth-child(2) {text-align: left ; width: 100%}\n",
+       "    .wandb-row { display: flex; flex-direction: row; flex-wrap: wrap; justify-content: flex-start; width: 100% }\n",
+       "    .wandb-col { display: flex; flex-direction: column; flex-basis: 100%; flex: 1; padding: 10px; }\n",
+       "    </style>\n",
+       "<div class=\"wandb-row\"><div class=\"wandb-col\"><h3>Run history:</h3><br/><table class=\"wandb\"><tr><td>epoch</td><td>▁</td></tr><tr><td>test_bgiou</td><td>▁</td></tr><tr><td>test_loss</td><td>▁</td></tr><tr><td>test_meaniou</td><td>▁</td></tr><tr><td>test_sunspotiou</td><td>▁</td></tr><tr><td>trainer/global_step</td><td>▁</td></tr></table><br/></div><div class=\"wandb-col\"><h3>Run summary:</h3><br/><table class=\"wandb\"><tr><td>epoch</td><td>0</td></tr><tr><td>test_bgiou</td><td>0.99976</td></tr><tr><td>test_loss</td><td>0.0006</td></tr><tr><td>test_meaniou</td><td>0.87409</td></tr><tr><td>test_sunspotiou</td><td>0.74843</td></tr><tr><td>trainer/global_step</td><td>0</td></tr></table><br/></div></div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Synced <strong style=\"color:#cdcd00\">Enhanced-T400-T350_alternating-StepLR</strong>: <a href=\"https://wandb.ai/nielssayez/Deepsun/runs/1iea2uih\" target=\"_blank\">https://wandb.ai/nielssayez/Deepsun/runs/1iea2uih</a><br/>Synced 6 W&B file(s), 0 media file(s), 0 artifact file(s) and 0 other file(s)"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Find logs at: <code>./wandb/run-20220622_134241-1iea2uih/logs</code>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "wandb.finish()"
    ]
   },
   {
